Backend: create a city loader class to set the cities in db